--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="side left">
         <div class="content">
             <div class="title">
-                <span>Szanowni państwo, nazywam się</span>
+                <span>
+                    Szanowni państwo,
+                    <br/>Nazywam się
+                </span>
                 <span>
               <span class="color">Kewin Kisiel</span>
             </span>
@@ -30,8 +33,9 @@
                 zawodowe oraz poszerzyć kompetencje praktyczne.
             </div>
             <div class="button-wrapper">
-                <button class="outline-button">Kontakt</button>
-                <button class="outline-button">Pobierz CV</button>
+                <a href="#contact"><button class="outline-button">Kontakt</button></a>
+                <a href="./assets/Kewin_Kisiel_CV.pdf" download ><button class="outline-button">Pobierz CV</button></a>
+
             </div>
         </div>
     </div>
@@ -87,13 +91,13 @@
                     Wykresy Giełdowe
                 </div>
                 <div class="button-wrapper">
-                    <a href="mp4/WykresyGieldowe.mp4">
+                    <a href="mp4/WykresyGieldowe.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Wykresy-Gieldowe">
+                    <a href="https://github.com/KWN-KSL/Wykresy-Gieldowe" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -108,13 +112,13 @@
                     Gra Black Box
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/BlackBox.mp4">
+                    <a href="./mp4/BlackBox.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Gra-Black-Box">
+                    <a href="https://github.com/KWN-KSL/Gra-Black-Box" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -129,13 +133,13 @@
                     Gra Pasjans Klondike
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/PasjansKlondike.mp4">
+                    <a href="./mp4/PasjansKlondike.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Gra-Pasjans-Klondike">
+                    <a href="https://github.com/KWN-KSL/Gra-Pasjans-Klondike" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -150,13 +154,13 @@
                     Lista Dwukierunkowa
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/ListaDwukierunkowa.mp4">
+                    <a href="./mp4/ListaDwukierunkowa.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Lista-Dwukierunkowa">
+                    <a href="https://github.com/KWN-KSL/Lista-Dwukierunkowa" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -171,13 +175,13 @@
                     Budowa Drona
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/Dron.mkv">
+                    <a href="./mp4/Dron.mkv" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Projekt4-Budowa-Drona">
+                    <a href="https://github.com/KWN-KSL/Projekt4-Budowa-Drona" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -192,13 +196,13 @@
                     Przetwarzanie Syngałów
                 </div>
                 <div class="button-wrapper">
-                    <a href="https://github.com/KWN-KSL/Projekt3-przetwarzanie-sygnalow/blob/master/raport/Projekt3-przetwarzanie-sygnalow.ipynb">
+                    <a href="https://github.com/KWN-KSL/Projekt3-przetwarzanie-sygnalow/blob/master/raport/Projekt3-przetwarzanie-sygnalow.ipynb" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
                         </button>
                     </a>
-                    <a href="https://github.com/KWN-KSL/Projekt3-Przetwarzanie-Sygnalow">
+                    <a href="https://github.com/KWN-KSL/Projekt3-Przetwarzanie-Sygnalow" target="_blank">
                         <button class="black-button">
                             <img src="./img/github.svg" alt=""/>
                             Code
@@ -210,7 +214,7 @@
     </div>
 </div>
 
-<div class="contact">
+<div class="contact" id="contact">
     <div class="content">
         <div class="title">Kontakt</div>
         <div class="list">
@@ -230,7 +234,7 @@
                 <div class="data">kisiel.kewin123@gmail.com</div>
             </div>
 
-            <a href="https://github.com/KWN-KSL" class="item">
+            <a href="https://github.com/KWN-KSL" class="item" target="_blank">
                 <div class="name">
                     Numer Telefonu
                     <img src="./img/github.svg" alt=""/>
