--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     Budowa Drona
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/Dron.mkv" target="_blank">
+                    <a href="./mp4/Dron.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
