--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="item">
                 <div class="name">
                     <img src="./img/cpp.svg" alt=""/>
-                    Przetwarzanie Syngałów
+                    Przetwarzanie Sygnałów
                 </div>
                 <div class="button-wrapper">
                     <a href="https://github.com/KWN-KSL/Projekt3-przetwarzanie-sygnalow/blob/master/raport/Projekt3-przetwarzanie-sygnalow.ipynb" target="_blank">
@@ -236,7 +236,7 @@
 
             <a href="https://github.com/KWN-KSL" class="item" target="_blank">
                 <div class="name">
-                    Numer Telefonu
+                    Konto GitHub
                     <img src="./img/github.svg" alt=""/>
                 </div>
                 <div class="data">@KWN-KSL</div>
