--- a/index.html
+++ b/index.html
@@ -85,6 +85,49 @@
     <div class="content">
         <div class="title">Moje <span class="color">Projekty</span></div>
         <div class="list">
+
+            <div class="item">
+                <div class="name">
+                    <img src="./img/python.svg" alt=""/>
+                    Space Invaders
+                </div>
+                <div class="button-wrapper">
+                    <a href="./mp4/SpaceInvaders.mp4" target="_blank">
+                        <button class="outline-button">
+                            <img src="./img/play.svg" alt=""/>
+                            Zobacz
+                        </button>
+                    </a>
+                    <a href="https://github.com/KWN-KSL/Space-Invaders" target="_blank">
+                        <button class="black-button">
+                            <img src="./img/github.svg" alt=""/>
+                            Code
+                        </button>
+                    </a>
+                </div>
+            </div>
+            
+            <div class="item">
+                <div class="name">
+                    <img src="./img/python.svg" alt=""/>
+                    Symulator Transmitancji
+                </div>
+                <div class="button-wrapper">
+                    <a href="./mp4/SymulatorTransmitancji.mp4" target="_blank">
+                        <button class="outline-button">
+                            <img src="./img/play.svg" alt=""/>
+                            Zobacz
+                        </button>
+                    </a>
+                    <a href="https://github.com/KWN-KSL/Symulator-Transmitancji" target="_blank">
+                        <button class="black-button">
+                            <img src="./img/github.svg" alt=""/>
+                            Code
+                        </button>
+                    </a>
+                </div>
+            </div>
+            
             <div class="item">
                 <div class="name">
                     <img src="./img/cpp.svg" alt=""/>
