--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     Space Invaders
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/Dron.mp4" target="_blank">
+                    <a href="./mp4/SpaceInvaders.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
@@ -113,7 +113,7 @@
                     Symulator Transmitancji
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/Dron.mp4" target="_blank">
+                    <a href="./mp4/Transmitancja.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
