Revise portfolio content and add new skills
Updated personal information and skills in the portfolio.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="pl">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Kewin Kisiel - Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    </head>
 
 <body>
 
@@ -26,55 +26,60 @@
               <span class="color">Kewin Kisiel</span>
             </span>
             </div>
-            <div class="description">Jestem studentem II roku kierunku Automatyka, Robotyka i Cybernetyka na
-                Politechnice Gdańskiej. Fascynują mnie nowoczesne technologie, zarówno w obszarze IT, jak i automatyki
+            <div class="description">
+                Jestem studentem II roku kierunku Automatyka, Robotyka i Cybernetyka na
+                Politechnice Gdańskiej. Fascynują mnie nowoczesne technologie, zarówno w obszarze IT (w tym rozwój aplikacji webowych w React), jak i automatyki
                 oraz robotyki. Aktywnie rozwijam swoje umiejętności techniczne poprzez realizację projektów
-                akademickich. Obecnie poszukuję możliwości odbycia stażu, który pozwoli mi zdobyć pierwsze doświadczenie
+                akademickich i własnych. Obecnie poszukuję możliwości odbycia stażu, który pozwoli mi zdobyć pierwsze doświadczenie
                 zawodowe oraz poszerzyć kompetencje praktyczne.
             </div>
             <div class="button-wrapper">
                 <a href="#contact"><button class="outline-button">Kontakt</button></a>
                 <a href="./assets/Kewin_Kisiel_CV.pdf" download ><button class="outline-button">Pobierz CV</button></a>
-
             </div>
         </div>
     </div>
     <div class="side right">
-        <img src="./img/ksl.png" alt=""/>
+        <img src="./img/ksl.png" alt="Kewin Kisiel"/>
     </div>
 </div>
+
 <div class="skills">
     <div class="content">
         <div class="title">Moje <span class="color">Umiejętności</span></div>
         <div class="description">
             W trakcie studiów realizowałem projekty oraz ćwiczenia laboratoryjne, które pozwoliły mi zdobyć podstawowe
-            doświadczenie w programowaniu w C++ i Pythonie, tworzeniu stron internetowych w HTML oraz analizie i
+            doświadczenie w programowaniu w C++ i Pythonie, tworzeniu stron internetowych (HTML, CSS, React) oraz analizie i
             optymalizacji procesów w MATLAB-ie. Brałem udział w zajęciach laboratoryjnych obejmujących takie zagadnienia
             jak technika cyfrowa, obwody i sygnały, metrologia, przyrządy półprzewodnikowe, elementy wykonawcze
-            automatyki, układy elektroniczne oraz przetwarzanie sygnałów. Dzięki temu zdobyłem solidne podstawy
-            praktyczne w zakresie analizy danych, projektowania i programowania algorytmów, pracy ze strukturami danych
-            oraz rozwiązywania problemów technicznych. Wiedzę teoretyczną staram się systematycznie pogłębiać i szukam
-            możliwości jej praktycznego wykorzystania podczas stażu lub pracy projektowej.
+            automatyki, układy elektroniczne oraz przetwarzanie sygnałów.
+            <br><br>
+            Ostatnio poszerzyłem swoją wiedzę o zagadnienia z zakresu: <strong>[TUTAJ WPISZ NOWE PRZEDMIOTY NP. SZTUCZNA INTELIGENCJA, SYSTEMY WBUDOWANE ITP.]</strong>.
+            Dzięki temu zdobyłem solidne podstawy praktyczne w zakresie analizy danych, projektowania i programowania algorytmów.
         </div>
         <div class="list">
             <div class="item">
-                <img src="./img/python.svg" alt=""/>
+                <img src="./img/python.svg" alt="Python"/>
                 <div class="name">Python</div>
             </div>
             <div class="item">
-                <img src="./img/cpp.svg" alt=""/>
+                <img src="./img/cpp.svg" alt="C++"/>
                 <div class="name">C++</div>
             </div>
             <div class="item">
-                <img src="./img/matlab.svg" alt=""/>
+                <img src="./img/react.svg" alt="React"/>
+                <div class="name">React</div>
+            </div>
+            <div class="item">
+                <img src="./img/matlab.svg" alt="MATLAB"/>
                 <div class="name">MATLAB</div>
             </div>
             <div class="item">
-                <img src="./img/htmlcss.svg" alt=""/>
+                <img src="./img/htmlcss.svg" alt="HTML & CSS"/>
                 <div class="name">HTML & CSS</div>
             </div>
             <div class="item">
-                <img src="./img/git.svg" alt=""/>
+                <img src="./img/git.svg" alt="Git"/>
                 <div class="name">Git source</div>
             </div>
         </div>
@@ -86,6 +91,26 @@
         <div class="title">Moje <span class="color">Projekty</span></div>
         <div class="list">
 
+            <div class="item">
+                <div class="name">
+                    <img src="./img/react.svg" alt="React"/>
+                    Gra Blackjack
+                </div>
+                <div class="button-wrapper">
+                    <a href="./mp4/Blackjack.mp4" target="_blank">
+                        <button class="outline-button">
+                            <img src="./img/play.svg" alt=""/>
+                            Zobacz
+                        </button>
+                    </a>
+                    <a href="https://github.com/KWN-KSL/Blackjack" target="_blank">
+                        <button class="black-button">
+                            <img src="./img/github.svg" alt=""/>
+                            Code
+                        </button>
+                    </a>
+                </div>
+            </div>
             <div class="item">
                 <div class="name">
                     <img src="./img/python.svg" alt=""/>
@@ -253,6 +278,54 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="certificates projects"> <div class="content">
+        <div class="title">Moje <span class="color">Certyfikaty</span></div>
+        <div class="description" style="margin-bottom: 30px;">
+            Stale poszerzam swoje kompetencje biorąc udział w specjalistycznych kursach. Posiadam certyfikaty od NVIDIA Deep Learning Institute.
+        </div>
+        <div class="list">
+            
+            <div class="item">
+                <div class="name">
+                    <img src="./img/nvidia.svg" alt="Nvidia"/>
+                    Certyfikat NVIDIA 1
+                    </div>
+                <div class="button-wrapper">
+                    <a href="#" target="_blank"> <button class="outline-button">
+                            Zobacz Certyfikat
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="name">
+                    <img src="./img/nvidia.svg" alt="Nvidia"/>
+                    Certyfikat NVIDIA 2 (W trakcie)
+                </div>
+                <div class="button-wrapper">
+                     <button class="outline-button" disabled>
+                            Wkrótce
+                     </button>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="name">
+                    <img src="./img/nvidia.svg" alt="Nvidia"/>
+                    Certyfikat NVIDIA 3 (W trakcie)
+                </div>
+                <div class="button-wrapper">
+                     <button class="outline-button" disabled>
+                            Wkrótce
+                     </button>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
