--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="description">
                 Jestem studentem II roku kierunku Automatyka, Robotyka i Cybernetyka na
-                Politechnice Gdańskiej. Fascynują mnie nowoczesne technologie, zarówno w obszarze IT (w tym rozwój aplikacji webowych w React), jak i automatyki
+                Politechnice Gdańskiej. Fascynują mnie nowoczesne technologie, zarówno w obszarze IT, jak i automatyki
                 oraz robotyki. Aktywnie rozwijam swoje umiejętności techniczne poprzez realizację projektów
                 akademickich i własnych. Obecnie poszukuję możliwości odbycia stażu, który pozwoli mi zdobyć pierwsze doświadczenie
                 zawodowe oraz poszerzyć kompetencje praktyczne.
@@ -52,10 +52,10 @@
             doświadczenie w programowaniu w C++ i Pythonie, tworzeniu stron internetowych (HTML, CSS, React) oraz analizie i
             optymalizacji procesów w MATLAB-ie. Brałem udział w zajęciach laboratoryjnych obejmujących takie zagadnienia
             jak technika cyfrowa, obwody i sygnały, metrologia, przyrządy półprzewodnikowe, elementy wykonawcze
-            automatyki, układy elektroniczne oraz przetwarzanie sygnałów.
-            <br><br>
-            Ostatnio poszerzyłem swoją wiedzę o zagadnienia z zakresu: <strong>[TUTAJ WPISZ NOWE PRZEDMIOTY NP. SZTUCZNA INTELIGENCJA, SYSTEMY WBUDOWANE ITP.]</strong>.
-            Dzięki temu zdobyłem solidne podstawy praktyczne w zakresie analizy danych, projektowania i programowania algorytmów.
+            automatyki, układy elektroniczne oraz przetwarzanie sygnałów. Dzięki temu zdobyłem solidne podstawy
+            praktyczne w zakresie analizy danych, projektowania i programowania algorytmów, pracy ze strukturami danych
+            oraz rozwiązywania problemów technicznych. Wiedzę teoretyczną staram się systematycznie pogłębiać i szukam
+            możliwości jej praktycznego wykorzystania podczas stażu lub pracy projektowej.
         </div>
         <div class="list">
             <div class="item">
@@ -97,7 +97,7 @@
                     Gra Blackjack
                 </div>
                 <div class="button-wrapper">
-                    <a href="./mp4/Blackjack.mp4" target="_blank">
+                    <a href="./mp4/SpaceInvaders.mp4" target="_blank">
                         <button class="outline-button">
                             <img src="./img/play.svg" alt=""/>
                             Zobacz
@@ -284,15 +284,12 @@
 
 <div class="certificates projects"> <div class="content">
         <div class="title">Moje <span class="color">Certyfikaty</span></div>
-        <div class="description" style="margin-bottom: 30px;">
-            Stale poszerzam swoje kompetencje biorąc udział w specjalistycznych kursach. Posiadam certyfikaty od NVIDIA Deep Learning Institute.
-        </div>
         <div class="list">
             
             <div class="item">
                 <div class="name">
                     <img src="./img/nvidia.svg" alt="Nvidia"/>
-                    Certyfikat NVIDIA 1
+                    Getting Started with Accelerated Computing in Modern CUDA C++
                     </div>
                 <div class="button-wrapper">
                     <a href="#" target="_blank"> <button class="outline-button">
@@ -305,24 +302,26 @@
             <div class="item">
                 <div class="name">
                     <img src="./img/nvidia.svg" alt="Nvidia"/>
-                    Certyfikat NVIDIA 2 (W trakcie)
+                    Getting Started with Deep Learning
                 </div>
                 <div class="button-wrapper">
-                     <button class="outline-button" disabled>
-                            Wkrótce
-                     </button>
+                    <a href="#" target="_blank"> <button class="outline-button">
+                            Zobacz Certyfikat
+                        </button>
+                    </a>
                 </div>
             </div>
 
             <div class="item">
                 <div class="name">
                     <img src="./img/nvidia.svg" alt="Nvidia"/>
-                    Certyfikat NVIDIA 3 (W trakcie)
+                    Getting Started with AI on Jetson Nano
                 </div>
                 <div class="button-wrapper">
-                     <button class="outline-button" disabled>
-                            Wkrótce
-                     </button>
+                    <a href="#" target="_blank"> <button class="outline-button">
+                            Zobacz Certyfikat
+                        </button>
+                    </a>
                 </div>
             </div>
 
